admin felulet javitas

--- a/admin.html
+++ b/admin.html
@@ -30,9 +30,6 @@
                 <li class="nav-item">
                   <a class="nav-link" href="admin.html">Adminisztrációs felület</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="velemeny.html">Vélemény</a>
-                </li>
               </ul>
             </div>
         </nav>
@@ -100,6 +97,7 @@
                       <th>Ár</th>
                       <th>Leírás</th>
                       <th>Készlet db</th>
+                      <th>Törlés</th>
                     </tr>
                   </thead>
                   <tbody>
