--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Richter Balázs</title>
     <!-- Latest compiled and minified CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </head>
 
   <body>
@@ -40,15 +41,16 @@
           <label for="termekKeres" class="col-lg-12">Termék neve:</label>
           <input type="text" name="termekKeres" value="A termék neve" class="col-lg-12">
         </div>
-
+        <br>
         <div class="dropdown">
             <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">
-              Dropdown button
+              Szűrési feltétel
             </button>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Link 1</a></li>
-              <li><a class="dropdown-item" href="#">Link 2</a></li>
-              <li><a class="dropdown-item" href="#">Link 3</a></li>
+              <li><a class="dropdown-item" href="#">Rendezés ár szerint (növekvő)</a></li>
+              <li><a class="dropdown-item" href="#">Rendezés ár szerint (csökkenő)</a></li>
+              <li><a class="dropdown-item" href="#">Rendezés név szerint (A-Z)</a></li>
+              <li><a class="dropdown-item" href="#">Rendezés név szerint (Z-A)</a></li>
             </ul>
           </div>
 
