--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </ul>
           </div>
       </nav>
-
+      
       <aside class="col-lg-2">
 
         <div class="row">
@@ -69,6 +69,21 @@
 
           </div>
       </article>
+
+      <aside class="col-lg-2">
+
+        <div class="row">
+
+            <h5>Kosár tartalma - 🛒</h5>
+              <div id="kosartartalom">
+
+              </div>
+              <br>
+              <button type="button" class="btn btn-outline-danger">Kosár tartalmának törlése - 🗑️</button>
+
+        </div>
+      </aside>
+
 
       <footer class="col-lg-12">
         <h4 class="text-center">Richter Balázs Krisztián</h4>
