--- a/index.html
+++ b/index.html
@@ -1,94 +1,94 @@
 <!DOCTYPE html>
 <html lang="hu">
-  <head>
-    <meta charset="UTF-8"/>
-    <meta name="description" content="Űrlap"/>
-    <meta name="keywords" content="Webáruház, E-shop, Bolt"/>
-    <meta name="author" content="Póló webáruház"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Richter Balázs</title>
-    <!-- Latest compiled and minified CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script type="module" src="main.js"></script>
-    <link rel="stylesheet" href="style.css">
-    
-  </head>
 
-  <body>
-    <main class="container-fluid row">
-      <header class="col-lg-12">
-        <h1>Póló Webáruház</h1>
-      </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="description" content="Űrlap" />
+  <meta name="keywords" content="Webáruház, E-shop, Bolt" />
+  <meta name="author" content="Póló webáruház" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Richter Balázs</title>
+  <!-- Latest compiled and minified CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <script type="module" src="main.js"></script>
+  <link rel="stylesheet" href="style.css">
 
-      <nav class="col-lg-12 navbar navbar-expand-sm bg-light">
-        <div class="container-fluid">
-          <!-- Links -->
-          <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="index.html">Termékeink</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="adatok.html">Személyes adatok</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="admin.html">Adminisztrációs felület</a>
-              </li>
-            </ul>
-          </div>
-      </nav>
-      
-      <aside class="col-lg-2">
+</head>
 
-        <div class="row">
+<body>
+  <main class="container-fluid row">
+    <header class="col-lg-12">
+      <h1>Póló Webáruház</h1>
+    </header>
 
-            <h5>Szűrési lehetőségek</h5>
-            <label for="termekKeres" class="col-lg-12">Termék neve:</label>
-            <input type="text" name="termekKeres" value="A termék neve" class="col-lg-12">
+    <nav class="col-lg-12 navbar navbar-expand-sm bg-light">
+      <div class="container-fluid">
+        <!-- Links -->
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Termékeink</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="adatok.html">Személyes adatok</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="admin.html">Adminisztrációs felület</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
 
-        </div>
+    <aside class="col-lg-2">
 
+      <div class="row">
+
+        <h5>Szűrési lehetőségek</h5>
         <br>
+        <input type="text" name="termekKeres" value="A termék neve" class="col-lg-12">
 
-        <div class="dropdown">
-            <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">
-              Szűrési feltétel
-            </button>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Rendezés ár szerint (növekvő)</a></li>
-                <li><a class="dropdown-item" href="#">Rendezés ár szerint (csökkenő)</a></li>
-                <li><a class="dropdown-item" href="#">Rendezés név szerint (A-Z)</a></li>
-                <li><a class="dropdown-item" href="#">Rendezés név szerint (Z-A)</a></li>
-              </ul>
-          </div>
-      </aside>
+      </div>
 
-      <article class="row col-lg-7">  
-          <div id="termekek">
+      <br>
 
-          </div>
-      </article>
+      <div class="dropdown">
+        <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">
+          Szűrési feltétel
+        </button>
+        <ul class="dropdown-menu">
+          <li><a class="dropdown-item" id="ar">Ár szerint</a></li>
+          <li><a class="dropdown-item" id="nev">Név szerint</a></li>
+        </ul>
+      </div>
+    </aside>
 
-      <aside class="col-lg-2">
+    <article class="row col-lg-7">
+      <div id="termekek">
 
-        <div class="row">
+      </div>
+    </article>
 
-            <h5>Kosár tartalma - 🛒</h5>
-              <div id="kosartartalom">
+    <aside class="col-lg-2">
 
-              </div>
-              <br>
-              <button type="button" class="btn btn-outline-danger">Kosár tartalmának törlése - 🗑️</button>
+      <div class="row">
+
+        <h5>Kosár tartalma - 🛒</h5>
+        <div id="kosartartalom">
 
         </div>
-      </aside>
+        <br>
+        <button type="button" class="btn btn-outline-danger">Kosár tartalmának törlése - 🗑️</button>
+
+      </div>
+    </aside>
 
 
-      <footer class="col-lg-12">
-        <h4 class="text-center">Richter Balázs Krisztián</h4>
-      </footer>
+    <footer class="col-lg-12">
+      <h4 class="text-center">Richter Balázs Krisztián</h4>
+    </footer>
 
-    </main>    
-  </body>
+  </main>
+</body>
+
 </html>
