--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <br>
 
       <div class="dropdown">
-        <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">
+        <button type="button" class="kosargomb btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">
           Szűrési feltétel
         </button>
         <ul class="dropdown-menu">
