--- a/index.html
+++ b/index.html
@@ -44,16 +44,19 @@
 
       <div class="row">
 
-        <h5>Szűrési lehetőségek</h5>
-        <br>
-        <input type="text" name="termekKeres" value="A termék neve" class="col-lg-12">
+        <div>
+          <div class="mb-3 mt-3">
+            <label for="sznev" class="form-label">Szűrés név szerint</label>
+            <input type="text" class="form-control szuro" id="sznev" placeholder="Kezdd el írni a nevet" name="szNev" />
+          </div>
+        </div>
 
       </div>
 
       <br>
 
       <div class="dropdown">
-        <button type="button" class="kosargomb btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">
+        <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">
           Szűrési feltétel
         </button>
         <ul class="dropdown-menu">
