--- a/index.html
+++ b/index.html
@@ -53,8 +53,6 @@
 
       </div>
 
-      <br>
-
       <div class="dropdown">
         <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">
           Rendezési feltétel
@@ -66,7 +64,7 @@
       </div>
     </aside>
 
-    <article class="row col-lg-7">
+    <article class="row col-lg-8">
       <div id="termekek">
 
       </div>
@@ -76,11 +74,12 @@
 
       <div class="row">
 
-        <h5>Kosár tartalma - 🛒</h5>
-        <div id="kosartartalom">
+        <h5 id="kosarfelirat">Kosár tartalma - 🛒</h5>
+      </div>
+      <div id="kosartartalom">
 
-        </div>
-        <br>
+      </div>
+      <br>
 
       </div>
     </aside>
