--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
   <main class="container-fluid row">
     <header class="col-lg-12">
-      <h1>Férfi Póló Webáruház.</h1>
+      <h1>Férfi Póló Webáruház</h1>
     </header>
 
     <nav class="col-lg-12 navbar navbar-expand-sm bg-light">
@@ -32,9 +32,6 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="adatok.html">Személyes adatok</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="admin.html">Adminisztrációs felület</a>
           </li>
         </ul>
       </div>
